--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="body">
     <a href="https://thepiercingarrow2.github.io/">
-    	<img scr="/images/banner"
+    	<img scr="/images/banner" />
     </a>
     
     <div id="main_body">
