--- a/index.html
+++ b/index.html
@@ -3,25 +3,16 @@
 
 <head>
 	<link rel="favicon" type="image/x-icon" href="/favicon.ico" />
-	<title>thepiercingarrow - Home</title>
-	
 	<link rel="Stylesheet" href="/stylesheet.css" type="text/css" />
 </head>
 
-<body class="body">
-    <a href="https://thepiercingarrow2.github.io/">
-    	<img scr="/images/banner" />
-    </a>
-    
-    <div id="main_body">
-    	<h1>thepiercingarrow - Home</h1>
-    	<p>Website Under development.</p>
-    </div>
+<body>
+
+<a>
+	<div class=banner_1>
+	</div>
+</a>
 
 </body>
-
-<footer>
-Website made from scratch.<img scr="http://mirrors.creativecommons.org/presskit/logos/cc.logo.png" />
-</footer>
 
 </html>
