--- a/invitebot.html
+++ b/invitebot.html
@@ -1,2 +1,2 @@
 <input id="cid" type="text"></input>
-<button onlick="location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=' + document.getElementById('cid').value + '&scope=bot&permissions=0'">
+<button onclick="location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=' + document.getElementById('cid').value + '&scope=bot&permissions=0'">
