--- a/invitebot.html
+++ b/invitebot.html
@@ -1,2 +1,4 @@
-<input id="cid" type="text"></input>
+<input id="cid" type="text"></input><br>
 <button onclick="location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=' + document.getElementById('cid').value + '&scope=bot&permissions=0'">
+  invite
+</button>
