bot invite add perms box

--- a/invitebot.html
+++ b/invitebot.html
@@ -1,4 +1,5 @@
-<input id="cid" type="text"></input><br>
-<button onclick="location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=' + document.getElementById('cid').value + '&scope=bot&permissions=0'">
+<input id="cid" type="text" placeholder="bot id"></input><br>
+<input id="perms" type="text" value="0" placeholder="permissions"></input><br>
+<button onclick="location.href = 'https://discordapp.com/api/oauth2/authorize?client_id=' + document.getElementById('cid').value + '&scope=bot&permissions=' + document.getElementById('perms')">
   invite
 </button>
